--- a/StackQA/en.lproj/Main.storyboard
+++ b/StackQA/en.lproj/Main.storyboard
@@ -333,13 +333,16 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="L5R-Bh-zVx">
-                                                <rect key="frame" x="8" y="176" width="584" height="36"/>
+                                                <rect key="frame" x="8" y="176" width="584" height="69"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LHN-Uj-Xxj">
-                                                        <rect key="frame" x="8" y="4" width="101" height="27"/>
+                                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LHN-Uj-Xxj">
+                                                        <rect key="frame" x="8" y="4" width="120" height="60"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="40" id="Ogd-fs-Y8n"/>
+                                                        </constraints>
                                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                                                        <state key="normal">
+                                                        <state key="normal" backgroundImage="greem-tag.png">
                                                             <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                         </state>
@@ -348,10 +351,10 @@
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0PC-R5-c6g">
-                                                        <rect key="frame" x="475" y="4" width="101" height="27"/>
+                                                        <rect key="frame" x="486" y="4" width="90" height="60"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                         <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                        <state key="normal">
+                                                        <state key="normal" backgroundImage="white-tag.png">
                                                             <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                         </state>
@@ -566,7 +569,7 @@
                                             <constraint firstAttribute="width" constant="58" id="5UX-fW-RP0"/>
                                             <constraint firstAttribute="height" constant="32" id="BzW-mm-zAh"/>
                                         </constraints>
-                                        <state key="normal" image="message.png">
+                                        <state key="normal" image="send-message.png">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
@@ -814,8 +817,10 @@
                                         <color key="backgroundColor" red="0.31467074969999997" green="1" blue="0.30157442699999998" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="58" id="HCz-pO-ZBz"/>
+                                            <constraint firstAttribute="height" constant="32" id="RYM-qq-Fu4"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="58" id="hHL-NP-hWK"/>
                                         </constraints>
-                                        <state key="normal" image="message.png">
+                                        <state key="normal" image="send-message.png">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
@@ -1207,7 +1212,11 @@
                                                     </textField>
                                                     <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cym-gz-Yzp">
                                                         <rect key="frame" x="197" y="205" width="206" height="30"/>
-                                                        <state key="normal" title="Отправить">
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="40" id="d0U-f7-gfc"/>
+                                                        </constraints>
+                                                        <state key="normal" title="Отправить" backgroundImage="green-round-button.png">
+                                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                         </state>
                                                         <connections>
@@ -1246,8 +1255,12 @@
                                                     </textField>
                                                     <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O6Y-x2-Vck">
                                                         <rect key="frame" x="225" y="127" width="150" height="30"/>
-                                                        <state key="normal" title="Войти">
-                                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="40" id="cRY-r3-Gwt"/>
+                                                        </constraints>
+                                                        <state key="normal" title="Войти" backgroundImage="green-round-button.png">
+                                                            <color key="titleColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <color key="titleShadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         </state>
                                                         <connections>
                                                             <action selector="loginButton:" destination="ch4-W7-k0g" eventType="touchUpInside" id="X1V-JT-4ZG"/>
@@ -1828,25 +1841,28 @@
         <image name="child1.png" width="24" height="24"/>
         <image name="down4-32.png" width="32" height="32"/>
         <image name="eye110.png" width="32" height="32"/>
+        <image name="greem-tag.png" width="141" height="60"/>
+        <image name="green-round-button.png" width="310" height="80"/>
         <image name="mark1.png" width="32" height="32"/>
         <image name="menu-32.png" width="32" height="32"/>
-        <image name="message.png" width="32" height="32"/>
         <image name="move9.png" width="32" height="32"/>
         <image name="plus-32.png" width="32" height="32"/>
+        <image name="send-message.png" width="115" height="60"/>
         <image name="up4-32.png" width="32" height="32"/>
+        <image name="white-tag.png" width="141" height="60"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="q9u-UF-HeO"/>
-        <segue reference="g3P-Gf-qaj"/>
+        <segue reference="jdO-yh-WYz"/>
+        <segue reference="dmP-y8-1gh"/>
         <segue reference="x3p-uV-IHe"/>
         <segue reference="zlR-QY-YZy"/>
-        <segue reference="dmP-y8-1gh"/>
+        <segue reference="g3P-Gf-qaj"/>
+        <segue reference="hPV-is-y6G"/>
         <segue reference="j9r-YK-ysW"/>
-        <segue reference="jdO-yh-WYz"/>
-        <segue reference="pXd-z1-64T"/>
         <segue reference="Mye-8z-EVr"/>
+        <segue reference="84w-cX-ZdW"/>
+        <segue reference="j2K-an-z6G"/>
         <segue reference="4oy-yi-Vs6"/>
-        <segue reference="5Em-mt-R6W"/>
         <segue reference="Ogc-fD-TQd"/>
     </inferredMetricsTieBreakers>
 </document>
